# HospitalOS

./: README.md  app.py  dockerfile  grader.py  hospital_env.py  inference.py  openenv.yaml  patient.py  pyproject.toml  requirements.txt  run.py  server.py  smart_agent.py
